// Produced by Acceleo Protobuf Generator 2.2.1-R12S2_alpha


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "ccsds_mal/types.proto";

package pusModelEditor.protobuf;

message Pus005OnBoardEvent {
extensions 19 to 119;

  optional ccsds_mal.protobuf.UINTEGER rid = 1;
  optional ccsds_mal.protobuf.UINTEGER onBoardStatus = 2;
  optional ccsds_mal.protobuf.STRING alarmLevel = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeRid = 4;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeRid = 5;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeOnBoardStatus = 6;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeOnBoardStatus = 7;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeAlarmLevel = 8;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeAlarmLevel = 9;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 10;
  optional ccsds_mal.protobuf.STRING serviceApidName = 11;
  optional ccsds_mal.protobuf.STRING reportName = 12;
  optional ccsds_mal.protobuf.STRING ridLabel = 13;
  optional ccsds_mal.protobuf.STRING reportShortDescription = 14;
  optional ccsds_mal.protobuf.STRING reportLongDescription = 15;
  optional ccsds_mal.protobuf.STRING actionName = 16;
  optional ccsds_mal.protobuf.UINTEGER defaultOnBoardStatus = 17;
  optional ccsds_mal.protobuf.ULONG uniqueId = 18;
}
